--- a/cart/index.html
+++ b/cart/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - Food Finder</title>
-    <link rel="stylesheet" href="cart-styles.css">
+    <link rel="stylesheet" href="cart-style.css">
 </head>
 <body>
     <div class="cart-container">
         <div class="header">
-            <button class="back-btn">&lt;</button>
+            <button class="back-btn" onclick="window.history.back()">&lt;</button>
             <h1>Cart Food</h1>
         </div>
         <div class="cart-items"></div>
@@ -21,6 +21,7 @@
         </div>
         <button class="checkout-btn" onclick="checkout()">Checkout</button>
     </div>
+    <script src="../scripts.js"></script>
     <script src="cart.js"></script>
 </body>
 </html>
