--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="Images\Location icon.png" alt="Location Icon">
+            <img src="Images/Location icon.png" alt="Location Icon">
             <div class="menu">
-                <img src="Images\list.png" alt="menu">
+                <img src="Images/list.png" alt="menu">
             </div>
         </div>
         <div class="title">Find good</div>
@@ -19,7 +19,7 @@
         <div class="search-bar">
             <input type="text" placeholder="Search your fav food">
             <button>
-                <img src="Images\glass.png" alt="Search Icon">
+                <img src="Images/glass.png" alt="Search Icon">
             </button>
         </div>
         <div class="find-section">
@@ -33,7 +33,7 @@
 
         <div class="food-items">
             <div class="food-item">
-                <img src="Images\Cheeze Pizza.png" alt="Cheese Pizza">
+                <img src="Images/Cheese Pizza.png" alt="Cheese Pizza">
                 <div class="food-info">
                     <p class="food-name">Cheese Pizza</p>
                     <p class="food-details">50min | 4.8</p>
@@ -41,14 +41,13 @@
                 </div>
                 <div class="food-actions">
                     <input type="number" value="1" min="1" class="quantity-input">
-                    <button onclick="addToCart('Cheese Pizza', 12.99, 'cheese-pizza.jpg', this)">Add to Cart</button>
+                    <button onclick="addToCart('Cheese Pizza', 12.99, 'Cheese pizza.png', event)">Add to Cart</button>
                 </div>
                 <button class="like-btn" onclick="toggleLike(this)">❤️</button>
             </div>
 
-            </div>
             <div class="food-item">
-                <img src="Images\Fruit Cake.png" alt="Fruit Cake">
+                <img src="Images/Fruit Cake.png" alt="Fruit Cake">
                 <div class="food-info">
                     <p class="food-name">Fruit Cake</p>
                     <p class="food-details">20min | 4.5</p>
@@ -56,23 +55,20 @@
                 </div>
                 <div class="food-actions">
                     <input type="number" value="1" min="1" class="quantity-input">
-                    <button onclick="addToCart('Fruit Cake', 4.88, 'fruit-cake.jpg', this)">Add to Cart</button>
+                    <button onclick="addToCart('Fruit Cake', 4.88, 'Fruit Cake.png', event)">Add to Cart</button>
                 </div>
                 <button class="like-btn" onclick="toggleLike(this)">❤️</button>
             </div>
-            <button onclick="window.location.href='food-items.html'">View Food Items</button>
-        </div>
-        <!-- Timer
-        <div id="timer-section">
-            <h2>Special Offer Ends In:</h2>
-            <div id="time">05:00</div>
-        </div> -->
-    </div>
-            </div>
-            <!-- Add more food items as needed -->
         </div>
 
-    </div> 
+        <button onclick="window.location.href='cart/index.html'">View Cart</button>
+    </div>
+
+    <div id="timer-section">
+        <h2>Special Offer Ends In:</h2>
+        <div id="time">05:00</div>
+    </div>
+    
     <script src="scripts.js"></script>
     <script src="timer.js"></script>
 </body>
