--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
         <div class="food-items">
             <div class="food-item">
-                <img src="Images/Cheese Pizza.png" alt="Cheese Pizza">
+                <img src="Images/Cheeze Pizza.png" alt="Cheese Pizza">
                 <div class="food-info">
                     <p class="food-name">Cheese Pizza</p>
                     <p class="food-details">50min | 4.8</p>
                     <p class="food-price">$12.99</p>
                 </div>
                 <div class="food-actions">
-                    <input type="number" value="1" min="1" class="quantity-input">
-                    <button onclick="addToCart('Cheese Pizza', 12.99, 'Cheese pizza.png', event)">Add to Cart</button>
+                    <input type="number" id="cheesePizzaQuantity" value="1" min="1">
+                    <button onclick="addToCart('Cheese Pizza', 12.99, 'Cheeze Pizza.png', event)">Add to Cart</button>
                 </div>
                 <button class="like-btn" onclick="toggleLike(this)">❤️</button>
             </div>
@@ -54,21 +54,21 @@
                     <p class="food-price">$4.88</p>
                 </div>
                 <div class="food-actions">
-                    <input type="number" value="1" min="1" class="quantity-input">
+                    <input type="number" id="fruitCakeQuantity" value="1" min="1">
                     <button onclick="addToCart('Fruit Cake', 4.88, 'Fruit Cake.png', event)">Add to Cart</button>
                 </div>
                 <button class="like-btn" onclick="toggleLike(this)">❤️</button>
             </div>
+
+            <button onclick="window.location.href='cart/index.html'">View Cart</button>
         </div>
 
-        <button onclick="window.location.href='cart/index.html'">View Cart</button>
+        <div id="timer-section">
+            <h2>Special Offer Ends In:</h2>
+            <div id="time">05:00</div>
+        </div>
     </div>
 
-    <div id="timer-section">
-        <h2>Special Offer Ends In:</h2>
-        <div id="time">05:00</div>
-    </div>
-    
     <script src="scripts.js"></script>
     <script src="timer.js"></script>
 </body>
